SCSS file directory changed in comments

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Canonical Test</title>
-  <!-- Main CSS file. To configure CSS file, use src/style.scss -->
+  <!-- Main CSS file. To configure CSS file, use src/css/style.scss -->
   <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
